--- a/charts/devtron/templates/migrator.yaml
+++ b/charts/devtron/templates/migrator.yaml
@@ -33,7 +33,15 @@ spec:
           envFrom:
             - secretRef:
                 name: devtron-secret
-          image: {{ include "fullImage" (dict "component" $.Values.components.migrator.devtron.initContainer.chartFix  "global" $.Values.global ) }}
+          {{- if $.Values.installer.modules }}
+          {{- if (has "cicd" $.Values.installer.modules) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.devtron "global" $.Values.global "extraImage" $.Values.components.devtron.cicdImage ) }}
+          {{- else }}
+          image: {{ include "common.image" (dict "component" $.Values.components.devtron "global" $.Values.global) }}
+          {{- end }}
+          {{- else }}
+          image: {{ include "common.image" (dict "component" $.Values.components.devtron "global" $.Values.global) }}
+          {{- end }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
 {{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
@@ -43,7 +51,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r /scripts/. /shared/
-          image: {{ include "fullImage"   (dict "component" $.Values.components.devtron "image" $.Values.components.devtron.cicdImage  "digest" $.Values.components.devtron.cicdImageDigest  "global" $.Values.global ) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.migrator "global" $.Values.global) }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
 {{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
@@ -76,7 +84,7 @@ spec:
             - secretRef:
                 name: postgresql-migrator
           {{- if .image }}        
-          image: {{ include "fullImage"   (dict "component" $.Values.components.migrator  "global" $.Values.global ) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.migrator "global" $.Values.global) }}
           {{- else }}
           image: migrate/migrate
           {{- end }} 
@@ -120,7 +128,7 @@ spec:
       {{- end }}
       containers:
       - name: devtron-rollout
-        image: {{ include "fullImage"   (dict "component" $.Values.kubectlUtility  "global" $.Values.global ) }}
+        image: {{ include "common.image" (dict "component" $.Values.components.migrator "global" $.Values.global "extraImage" $.Values.components.migrator.kubectlImage ) }}
         command: ['sh', '-c', 'kubectl rollout restart deployment/devtron -n devtroncd && kubectl rollout restart deployment/kubelink -n devtroncd']
         {{- if .casbin }}
         {{- if .casbin.resources }}        
@@ -133,7 +141,15 @@ spec:
             - /bin/sh
             - -c
             - cp -r /scripts/. /shared/
-          image: {{ include "fullImage"   (dict "component" $.Values.components.devtron "image" $.Values.components.devtron.cicdImage  "digest" $.Values.components.devtron.cicdImageDigest  "global" $.Values.global ) }}
+          {{- if $.Values.installer.modules }}
+          {{- if (has "cicd" $.Values.installer.modules) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.devtron "global" $.Values.global "extraImage" $.Values.components.devtron.cicdImage ) }}
+          {{- else }}
+          image: {{ include "common.image" (dict "component" $.Values.components.devtron "global" $.Values.global) }}
+          {{- end }}
+          {{- else }}
+          image: {{ include "common.image" (dict "component" $.Values.components.devtron "global" $.Values.global) }}
+          {{- end }}
           name: init-devtron
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
@@ -165,7 +181,7 @@ spec:
             - secretRef:
                 name: postgresql-migrator
           {{- if .image }}        
-          image: {{ include "fullImage"   (dict "component" $.Values.components.migrator  "global" $.Values.global ) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.migrator "global" $.Values.global) }}
           {{- else }}
           image: migrate/migrate
           {{- end }} 
@@ -212,7 +228,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r sql /shared/
-          image: {{ include "fullImage" (dict "component" $.Values.components.gitsensor  "global" $.Values.global ) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.gitsensor "global" $.Values.global) }}
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
 {{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
@@ -245,7 +261,7 @@ spec:
             - secretRef:
                 name: postgresql-migrator
           {{- if .image }}        
-          image: {{ include "fullImage"   (dict "component" $.Values.components.migrator  "global" $.Values.global ) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.migrator "global" $.Values.global) }}
           {{- else }}
           image: migrate/migrate
           {{- end }} 
@@ -290,7 +306,7 @@ spec:
             - /bin/sh
             - -c
             - cp -r sql /shared/
-          image: {{ include "fullImage" (dict "component" $.Values.components.lens  "global" $.Values.global ) }}
+          image: {{ include "common.image" (dict "component" $.Values.components.lens "global" $.Values.global) }}
           name: init-lens
           {{- if and $.Values.global $.Values.global.containerSecurityContext }}
           securityContext:
@@ -328,7 +344,7 @@ spec:
         - secretRef:
             name: postgresql-migrator
         {{- if .image }}        
-        image: {{ include "fullImage"   (dict "component" $.Values.components.migrator  "global" $.Values.global ) }}
+        image: {{ include "common.image" (dict "component" $.Values.components.migrator "global" $.Values.global) }}
         {{- else }}
         image: migrate/migrate
         {{- end }} 
@@ -367,9 +383,9 @@ spec:
       containers:
       - name: postgresql-miscellaneous
         {{- if not $.Values.installer.arch }}
-        image: {{ include "fullImage"   (dict "component" $.Values.components.postgres  "global" $.Values.global ) }}
+        image: {{ include "common.image"   (dict "component" $.Values.components.postgres  "global" $.Values.global ) }}
         {{- else }}
-        image: {{ include "fullImage"   (dict "component" $.Values.components.postgres.arm  "global" $.Values.global ) }}
+        image: {{ include "common.image"   (dict "component" $.Values.components.postgres.arm  "global" $.Values.global ) }}
         {{- end }}
         securityContext:
           allowPrivilegeEscalation: false
