--- a/charts/devtron/values.yaml
+++ b/charts/devtron/values.yaml
@@ -60,6 +60,8 @@ components:
         GLOBAL_API_TIMEOUT: "60000"
         TRIGGER_API_TIMEOUT: "60000"
         ENABLE_EXTERNAL_ARGO_CD: "false"
+        SERVICE_WORKER_TIMEOUT: "1"
+        API_BATCH_SIZE: "30"
     image: "quay.io/devtron/dashboard:1c86e84e-325-22108"
     imagePullPolicy: IfNotPresent
 
