adding security context in notifier

--- a/charts/devtron/templates/notifier.yaml
+++ b/charts/devtron/templates/notifier.yaml
@@ -74,10 +74,19 @@ spec:
     spec:
       terminationGracePeriodSeconds: 30
       restartPolicy: Always
+      {{- if and $.Values.global $.Values.global.podSecurityContext }}
+      securityContext:
+{{- toYaml $.Values.global.podSecurityContext | nindent 8 }}
+      {{- end }}
       containers:
         - name: notifier
           image: {{ include "common.image" (dict "component" $.Values.notifier "global" $.Values.global ) }}
           imagePullPolicy: {{ .imagePullPolicy }}
+        {{- if and $.Values.global $.Values.global.containerSecurityContext }}
+          securityContext:
+{{- toYaml $.Values.global.containerSecurityContext | nindent 12 }}
+          {{- end }}
+
           ports:
             - name: app
               containerPort: 3000
